# pi-weather

./: .env-rust  .env-rust.example  .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_GUIDE.md  README-RUST.md  README.md  build.rs  index.html  scripts.js  start-kiosk.sh  start-native.sh  styles.css  weather_display.py
.github/: copilot-instructions.md
sample/: README.md  index.html
sample/src/app/: App.tsx
sample/src/app/components/: RetroAnalogClock.tsx  RetroWeatherPanel.tsx
src/: main.rs
ui/: weather_display.slint
