[package]
name = "pi-weather-slint"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9"
tokio = { version = "1.42", features = ["rt", "sync", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = "0.4"

[build-dependencies]
slint-build = "1.9"

# Optimize for Raspberry Pi Zero W
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
